# SC3020

./: .gitignore  B+_Tree_Parameter_Calculation.md  CMakeLists.txt  README.md  Task2.md  calculate_n  calculate_optimal_n.cpp  ft_pct_home.idx  main  output.txt
Project1/: .gitignore  CMakeLists.txt  readme.txt  test.cpp
Project1/data/: games.txt
Project1/headers/: block.hpp  disk.hpp  loader.hpp  record.hpp
Project1/include/: buffer.hpp  common.hpp  disk.hpp  heap_file.hpp  serde.hpp  slotted_page.hpp
Project1/src/: block.cpp  buffer.cpp  disk.cpp  loader.cpp  main.cpp  record.cpp
data/: data.db  ft_pct_home.idx  ft_pct_home_task3.idx  task3_data.db
include/: block.h  bplus_tree.h  constants.h  disk.h  record.h  utils.h
src/: bplus_tree.cpp  disk.cpp  main.cpp  utils.cpp
